<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Basic app strings -->
    <string name="app_name">SenseiLogger</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_sim">Run logger</string>
    <string name="app_name_voice">Voice logger</string>
    
    <!-- Share dialog -->
    <string name="share_title">I want to share a movement measurement with you</string>
    <string name="share_body">Here is a movement measurement I did.</string>
    <string name="share_dialog_title">Share movement measurement</string>
    <string name="share_prefix_button">Share </string>
   
    <!-- Buttons -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="button_clear_data">Clear data</string>    
    
    <string name="confirm_clear_data">Delete all data from database?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Bluetooth -->
     <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect_device">Connect to device</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="heart_rate_header">Heart rate</string>
    <string name="heart_rate_unit_bpm">bpm</string>

    <!-- Record -->
 	<string name="button_start_recording">Start</string>
    <string name="button_stop_recording">Stop</string>

    <string name="sampling_rate_unit_hz">Hz</string>
    <string name="sampling_rate_header">Sampling rate</string>
    
    <string name="msg_sent_data">Inserted data point for \'%s\'</string>
    <string name="msg_please_wait">Generating data files</string>
    <string name="hint_target_ip">Target IP</string>
    <string name="hint_target_port">Target port</string>
    <string name="label_data_to_target">Stream data to IP</string>
    <string name="label_data_files">File list</string>
    
    <string name="label_recording_duration">Recording duration in seconds</string>
    <string name="label_recording_frequency">Recording frequency in seconds</string>
    <string name="label_recording_frequency_count">Recording frequency </string>
    <string name="label_recording_message">Question</string>
    <string name="next_recording">Next recording in</string>
    <string name="recording_duration">Recording duration</string>
    <string name="time_unit_minutes">minutes</string>
    <string name="time_unit_seconds">seconds</string>
    <string name="voice_question">How are you feeling?</string>
       
    
     <string name="error_invalidaddr">Invalid IP address</string>
    <string name="error_neterror">Unknown UDP network problem</string>
    <string name="error_sensorerror">Unknown IMU sensor problem</string>
    <string name="error_warningwifi">Warning: Not connected to a WIFI network.</string>
    
    <!-- Location -->
        <!-- Messages -->
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
        <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    
    <string name="speed_header">Speed</string>
    <string name="speed_unit">km/h</string>
    <string name="label_nr_tag">#</string>
    <string name="label_run_id">Run nr</string>
</resources>
