<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <LinearLayout
            android:id="@+id/Headliner"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:id="@+id/Sensei"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:maxHeight="10dip"
                android:scaleType="fitStart"
                android:src="@drawable/logosensei" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:paddingTop="6dip"
                android:text="@string/app_name_voice"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:background="@color/background" >

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Indication text for communication message, like: recording"
                tools:context=".MainActivity"
                android:padding="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:weightSum="2" >

                <RelativeLayout
                    style="@style/unit.style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/frequency_timer_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/next_recording"
                        android:textAppearance="@style/unit.header" />

                    <LinearLayout
                        style="@style/unit.info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/frequency_timer_header"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/time_info"
                            style="@style/unit.info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2:31" />

                        <TextView
                            style="@style/unit.unit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/time_unit_seconds" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    style="@style/unit.style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/recording_timer_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/recording_duration"
                        android:textAppearance="@style/unit.header" />

                    <LinearLayout
                        style="@style/unit.info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/recording_timer_header"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/recording_timer_info"
                            style="@style/unit.info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0:30" />

                        <TextView
                            style="@style/unit.unit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/time_unit_seconds" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:enabled="false"
                android:text="@string/stop"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_recording_duration" />

                <EditText
                    android:id="@+id/recording_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_recording_frequency" />

                <EditText
                    android:id="@+id/recording_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="300" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_recording_message" />

                <EditText
                    android:id="@+id/recording_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_data_to_target" />

                <ToggleButton
                    android:id="@+id/stream_data_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />
            </LinearLayout>

            <EditText
                android:id="@+id/target_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_target_ip"
                android:inputType="textUri" />

            <EditText
                android:id="@+id/target_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_target_port"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fileList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_data_files" />

            <LinearLayout
                android:id="@+id/fileList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4" >

            <ImageView
                android:id="@+id/COMMIT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.15"
                android:src="@drawable/commit" />

            <ImageView
                android:id="@+id/ACE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:src="@drawable/ace" />

            <ImageView
                android:id="@+id/Infosys"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:layout_margin="10dip"
                android:src="@drawable/infosys" />
            
            <ImageView
                android:id="@+id/HVA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.95"
                android:src="@drawable/hva" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>