<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <LinearLayout
            android:id="@+id/Headliner"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:id="@+id/Sensei"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:maxHeight="10dip"
                android:scaleType="fitStart"
                android:src="@drawable/logosensei" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:paddingTop="6dip"
                android:text="@string/app_name_sim"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            tools:context=".MainActivity" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:enabled="false"
            android:text="@string/stop" />

        <LinearLayout
            android:id="@+id/fileList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4" >

            <ImageView
                android:id="@+id/COMMIT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.07"
                android:src="@drawable/commit" />

            <ImageView
                android:id="@+id/ACE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.07"
                android:src="@drawable/ace" />

            <ImageView
                android:id="@+id/CREATEIT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dip"
                android:layout_weight="1.07"
                android:src="@drawable/createit" />

            <ImageView
                android:id="@+id/HVA"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.79"
                android:src="@drawable/hva" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>